--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ url = "1.2.0"
 walkdir = "0.1.5"
 yaml-rust = "0.3.3"
 scoped-pool = "1"
+pbr = "0.3.1"
 
 [dependencies.cpython]
 git = "https://github.com/dgrunwald/rust-cpython.git"
